@@ -1,12 +1,12 @@
 
 # Plone installation with minitage support
 
-# It will install your plone in debug mode and a bunch of debug tools.
+# It will install your plone in production mode
 # Launch it:
 # bin/buildout -c minitage.buildout-prod.cfg
 
 # minimerge -NuUvR ${project}
-# look at the extenended buildout: ./buildout-dev.cfg for other details of your plone installation
+# look at the extenended buildout: ./buildout-prod.cfg for other details of your plone installation
 
 # We want the production buildout + the debug bits.
 [buildout]
